--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,11 @@
 language: python
+install:
+  - pip install coveralls
 python:
   - "2.7"
   - "3.3"
 script:
+  - coverage run normalization/ufonormalizer -t
   - normalization/ufonormalizer -t | tee /dev/stderr | grep "\*\*\*Test Failed\*\*\*"; if [[ ${PIPESTATUS[2]} == "0" ]]; then exit 1 ; fi
+after_success:
+  coveralls
