[travis] run setup.py install before running tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,12 @@
 language: python
 install:
   - pip install coveralls
+  - python setup.py install
 python:
   - "2.7"
   - "3.4"
 script:
-  - coverage run normalization/ufonormalizer -t
-  - normalization/ufonormalizer -t | tee /dev/stderr | grep "\*\*\*Test Failed\*\*\*"; if [[ ${PIPESTATUS[2]} == "0" ]]; then exit 1 ; fi
+  - coverage run normalization/ufonormalizer.py -t
+  - ufonormalizer -t | tee /dev/stderr | grep "\*\*\*Test Failed\*\*\*"; if [[ ${PIPESTATUS[2]} == "0" ]]; then exit 1 ; fi
 after_success:
   coveralls
