--- a/.travis.yml
+++ b/.travis.yml
@@ -12,12 +12,10 @@ python:
 script:
   - coverage run setup.py test
 after_success:
+  - coveralls
   - |
     if [ -n "$TRAVIS_TAG" ] && [ "$TRAVIS_REPO_SLUG" == "unified-font-object/ufoNormalizer" ] && [ "$TRAVIS_PYTHON_VERSION" == "3.6" ]; then
       pip install --upgrade twine setuptools wheel
       python setup.py sdist bdist_wheel
       twine upload dist/*.whl dist/*.zip
     fi
-
-after_success:
-  coveralls
