--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [bumpversion]
-current_version = 0.5.0.dev0
+current_version = 0.4.1
 commit = True
 tag = False
 tag_name = {new_version}
@@ -28,4 +28,3 @@ formats = zip
 
 [metadata]
 license_file = LICENSE.txt
-
