implement scm_version

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,6 +1,5 @@
 include README.md
 include LICENSE.txt
-include appveyor.yml
-include .travis.yml
+recursive-include src/ *.py
 recursive-include tests/ *.py
 recursive-include tests/data/ *.glif
