--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -43,6 +43,7 @@ jobs:
         flake8 --count --show-source --statistics
 
     - name: Run test suite & upload coverage
+      env: GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
         coverage run setup.py test
         coveralls
