--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,5 +2,5 @@
 requires = ["setuptools>=42", "wheel", "setuptools_scm[toml]>=3.4"]
 
 [tool.setuptools_scm]
-write_to = 'src/_version.py'
+write_to = 'src/ufonormalizer/_version.py'
 write_to_template = '__version__ = "{version}"'
