--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,5 @@
 include README.md
 include LICENSE.txt
-recursive-include src/ *.py
+recursive-include src/ufonormalizer/ *.py
 recursive-include tests/ *.py
 recursive-include tests/data/ *.glif
